--- a/conceptdesign.html
+++ b/conceptdesign.html
@@ -326,10 +326,10 @@
 							<!-- titles -->
 							<div class="h-titles">
 								<div class="h-subtitle splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-									Do you have
+									Você tem um
 								</div>
 								<div class="h-title splitting-text-anim-2 scroll-animate" data-splitting="chars" data-animate="active">
-									project?
+									projeto?
 								</div>
 								<div class="h-text scrolla-element-anim-1 scroll-animate" data-animate="active">
 									<p>
@@ -389,7 +389,7 @@
 	    							A Dave Craft foi criada para oferecer a melhor experiência em design para quem quer se destacar com qualidade e criatividade.
 	    						</p>
 	    						<p>
-	    							Propomos uma parceria imersiva, moderna e focada nos detalhes, do início ao fim, para diferenciar o seu negócio.
+	    							Propomos uma parceria imersiva, moderna e focada nos detalhes, do início ao fim. O seu negócio será diferente.
 	    						</p>
 	    					</div>
 	    				</div>
