--- a/gallery-2-column.html
+++ b/gallery-2-column.html
@@ -314,10 +314,10 @@
 							<!-- titles -->
 							<div class="h-titles">
 								<div class="h-subtitle splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-									Do you have
+									Você tem um
 								</div>
 								<div class="h-title splitting-text-anim-2 scroll-animate" data-splitting="chars" data-animate="active">
-									project?
+									projeto?
 								</div>
 								<div class="h-text scrolla-element-anim-1 scroll-animate" data-animate="active">
 									<p>
