--- a/quem-somos.html
+++ b/quem-somos.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Oblo - Showcase Portfolio & Agency Template</title>
+	<title>Dave Craft - Portfólio & Agência</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="HandheldFriendly" content="true">
-	<meta name="author" content="beshleyua" />
-	<meta name="description" content="Creative Agency Portfolio HTML5 Template. Best suited for Portfolio, Agency, Photography, Showcases." />
+	<meta name="Dave Craft" content="true">
+	<meta name="author" content="davecraft" />
+	<meta name="description" content="Agência Criativa de Design" />
 	
 	<!-- fontawesome CSS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css">
@@ -176,16 +176,16 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-5">
 							<div class="description-label splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-								Who we are
+								Quem nós somos
 							</div>
 						</div>
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-7">
 							<div class="description-text scrolla-element-anim-1 scroll-animate" data-animate="active">
 								<p>
-									It is not enough that we build products that function, that are understandable and usable, we also need to build products that bring joy and excitement, pleasure and fun, and, yes, beauty to people’s lives. Creativity is to discover a question that has never been asked. If one brings up an idiosyncratic question, the answer he gives will necessarily be unique as well.
+									Não é suficiente dizer que criamos um design que funciona, é acessível e atende a experiência do usuário. Precisamos anunciar que construímos um design envolvente, que faz de uma tarefa simples uma atividade agradável e, sim, que traz beleza e prazer à vida.
 								</p>
 								<p>
-									Creativity is to discover a question that has never been asked. If one brings up an idiosyncratic question, the answer he gives will necessarily be unique as well.
+									Nosso processo criativo é orientado a descobrir novas respostas a questões sem solução ou já resolvidas. Nosso alvo é conceber ou promover produtos únicos, para os mais diversos negócios.
 								</p>
 							</div>
 						</div>
@@ -202,7 +202,7 @@
 							<!-- titles -->
 							<div class="m-titles">
 								<div class="m-title splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-									Our Services
+									Nossos serviços
 								</div>
 								<div class="m-subtitle scrolla-element-anim-1 scroll-animate" data-animate="active">
 									Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra, at molestie ante dictum.
@@ -223,7 +223,7 @@
 											<i class="fas fa-pencil-ruler"></i>
 										</div>
 										<div class="name splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-											Branding
+											Webdesign
 										</div>
 										<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
 											Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra.
@@ -237,7 +237,7 @@
 											<i class="fas fa-camera-retro"></i>
 										</div>
 										<div class="name splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-											Photography
+											Concept Design
 										</div>
 										<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
 											Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra.
@@ -251,7 +251,7 @@
 											<i class="fas fa-headphones"></i>
 										</div>
 										<div class="name splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-											Music
+											Audio Design
 										</div>
 										<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
 											Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra.
@@ -265,7 +265,7 @@
 											<i class="fas fa-copyright"></i>
 										</div>
 										<div class="name splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-											Copyright
+											Creative Design
 										</div>
 										<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
 											Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra.
@@ -279,7 +279,7 @@
 											<i class="fas fa-play"></i>
 										</div>
 										<div class="name splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-											Film
+											Video Design
 										</div>
 										<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
 											Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra.
@@ -293,7 +293,7 @@
 											<i class="fas fa-podcast"></i>
 										</div>
 										<div class="name splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-											Podcast
+											Diagrammatic Design
 										</div>
 										<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
 											Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra.
@@ -493,10 +493,10 @@
 							<!-- titles -->
 							<div class="h-titles">
 								<div class="h-subtitle splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-									Do you have
+									Você tem um
 								</div>
 								<div class="h-title splitting-text-anim-2 scroll-animate" data-splitting="chars" data-animate="active">
-									project?
+									projeto?
 								</div>
 								<div class="h-text scrolla-element-anim-1 scroll-animate" data-animate="active">
 									<p>
@@ -515,12 +515,10 @@
 			
 							<!-- newslatter form -->
 							<div class="newslatter-form scrolla-element-anim-1 scroll-animate" data-animate="active">
-								<form id="newslatter_form" method="post">
-									<div class="field">
-										<input type="email" name="email" placeholder="Email address" />
-									</div>
-									<input type="submit" class="submit-btn" value="Get Started" />
-								</form>
+								<div style="position: relative; padding: 0 20px; display: block; width: 100%; height: 62px; font-family: "Roboto"; font-size: 18px; color: #FFF; resize: none; outline: 0; background: none; border: 1px solid #c0c0c7">Fale conosco pelo Workana
+								</div>
+								<div style="padding: 0; position: absolute; top: 0; right: 0; width: 300px; cursor: pointer; background-color: #594E9B; overflow: hidden; display: inline-block; vertical-align: top; font-size: 18px; color: #FFF; ont-weight: 900; height: 62px; line-height: 60px; text-align: center; text-decoration: none; border: 2px solid #594E9B; outline: none!important; box-shadow: none!important; -webkit-border-radius: 0; -webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1); -webkit-appearance: button; font-family: "Roboto"">
+								</div>
 							</div>
 			
 						</div>
@@ -556,7 +554,7 @@
 	    							A Dave Craft foi criada para oferecer a melhor experiência em design para quem quer se destacar com qualidade e criatividade.
 	    						</p>
 	    						<p>
-	    							Propomos uma parceria imersiva, moderna e focada nos detalhes, do início ao fim, para diferenciar o seu negócio.
+	    							Propomos uma parceria imersiva, moderna e focada nos detalhes, do início ao fim. O seu negócio será diferente.
 	    						</p>
 	    					</div>
 	    				</div>
