--- a/contacts.html
+++ b/contacts.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Oblo - Showcase Portfolio & Agency Template</title>
+	<title>Dave Craft - Portfólio & Agência</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="HandheldFriendly" content="true">
-	<meta name="author" content="beshleyua" />
-	<meta name="description" content="Creative Agency Portfolio HTML5 Template. Best suited for Portfolio, Agency, Photography, Showcases." />
+	<meta name="Dave Craft" content="true">
+	<meta name="author" content="davecraft" />
+	<meta name="description" content="Agência Criativa de Design" />
 	
 	<!-- fontawesome CSS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css">
