--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Oblo - Showcase Portfolio & Agency Template</title>
+	<title>Dave Craft - Portfólio & Agência</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="HandheldFriendly" content="true">
-	<meta name="author" content="beshleyua" />
-	<meta name="description" content="Creative Agency Portfolio HTML5 Template. Best suited for Portfolio, Agency, Photography, Showcases." />
+	<meta name="Dave Craft" content="true">
+	<meta name="author" content="davecraft" />
+	<meta name="description" content="Agência Criativa de Design" />
 	
 	<!-- fontawesome CSS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css">
@@ -410,10 +410,10 @@
 							<!-- titles -->
 							<div class="h-titles">
 								<div class="h-subtitle splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-									Do you have
+									Você tem um
 								</div>
 								<div class="h-title splitting-text-anim-2 scroll-animate" data-splitting="chars" data-animate="active">
-									project?
+									projeto?
 								</div>
 								<div class="h-text scrolla-element-anim-1 scroll-animate" data-animate="active">
 									<p>
@@ -473,7 +473,7 @@
 	    							A Dave Craft foi criada para oferecer a melhor experiência em design para quem quer se destacar com qualidade e criatividade.
 	    						</p>
 	    						<p>
-	    							Propomos uma parceria imersiva, moderna e focada nos detalhes, do início ao fim, para diferenciar o seu negócio.
+	    							Propomos uma parceria imersiva, moderna e focada nos detalhes, do início ao fim. O seu negócio será diferente.
 	    						</p>
 	    					</div>
 	    				</div>
