--- a/webdesign.html
+++ b/webdesign.html
@@ -432,7 +432,7 @@
 	    							A Dave Craft foi criada para oferecer a melhor experiência em design para quem quer se destacar com qualidade e criatividade.
 	    						</p>
 	    						<p>
-	    							Propomos uma parceria imersiva, moderna e focada nos detalhes, do início ao fim, para diferenciar o seu negócio.
+	    							Propomos uma parceria imersiva, moderna e focada nos detalhes, do início ao fim. O seu negócio será diferente.
 	    						</p>
 	    					</div>
 	    				</div>
