--- a/quem-somos.html
+++ b/quem-somos.html
@@ -182,7 +182,7 @@
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-7">
 							<div class="description-text scrolla-element-anim-1 scroll-animate" data-animate="active">
 								<p>
-									Não é suficiente dizer que criamos um design que funciona, é acessível e atende a experiência do usuário. Precisamos anunciar que construímos um design envolvente, que faz de uma tarefa simples uma atividade agradável e, sim, que traz beleza e prazer à vida.
+									Não é suficiente dizer que criamos designs que funcionam, são acessíveis e atendem a experiência dos usuários. Precisamos anunciar que construímos designs envolventes, que fazem de simples tarefas atividades agradáveis e, sim, que trazem beleza e prazer à vida.
 								</p>
 								<p>
 									Nosso processo criativo é orientado a descobrir novas respostas a questões sem solução ou já resolvidas. Nosso alvo é conceber ou promover produtos únicos, para os mais diversos negócios.
@@ -226,7 +226,7 @@
 											Webdesign
 										</div>
 										<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
-											Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra.
+											Pesquisamos tendências, projetamos layouts atraentes, codificamos com precisão, testamos interatividade e otimizamos a performance.
 										</div>
 									</div>
 								</div>
@@ -240,7 +240,7 @@
 											Concept Design
 										</div>
 										<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
-											Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra.
+											Exploramos ideias inovadoras, esboçamos conceitos inspiradores, refinamos detalhes, criamos protótipos e transformamos visões em realidade criativa.
 										</div>
 									</div>
 								</div>
@@ -254,7 +254,7 @@
 											Audio Design
 										</div>
 										<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
-											Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra.
+											Testamos novas sonoridades, mixamos, ajustamos efeitos sonoros, criamos trilhas sonoras imersivas e proporcionamos experiências auditivas impactantes.
 										</div>
 									</div>
 								</div>
@@ -268,7 +268,7 @@
 											Creative Design
 										</div>
 										<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
-											Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra.
+											Exploramos a imaginação com IA generativa, entregamos soluções inovadoras e traduzimos projetos em produtos criativos e diferenciados.
 										</div>
 									</div>
 								</div>
@@ -282,7 +282,7 @@
 											Video Design
 										</div>
 										<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
-											Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra.
+											Exploramos narrativas únicas, planejamos cenas, editamos , aplicamos efeitos visuais impactantes e entregamos produções audiovisuais de alta qualidade.
 										</div>
 									</div>
 								</div>
@@ -296,7 +296,7 @@
 											Diagrammatic Design
 										</div>
 										<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
-											Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra.
+											Criamos representações visuais com técnicas de infografia e visualização de dados, estruturamos informações complexas, simplificamos conceitos e comunicamos com eficácia
 										</div>
 									</div>
 								</div>
