--- a/quem-somos.html
+++ b/quem-somos.html
@@ -151,7 +151,7 @@
 							<!-- titles -->
 							<div class="h-titles">
 								<div class="h-subtitle red splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-									O design habita em nós
+									Farejamos design
 								</div>
 								<div class="h-title splitting-text-anim-2 scroll-animate" data-splitting="chars" data-animate="active">
 									quem somos
