--- a/index-fullscreen.html
+++ b/index-fullscreen.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Dave Craft - Portfólio & Agência</title>
+	<title>Dave Craft - PortfÃ³lio & AgÃªncia</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="Dave Craft" content="true">
 	<meta name="author" content="davecraft" />
-	<meta name="description" content="Agência Criativa de Design" />
+	<meta name="description" content="AgÃªncia Criativa de Design" />
 	
 	<!-- fontawesome CSS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css">
@@ -79,7 +79,7 @@
 								<div class="menu-full">
 									<ul>
 										<li class="has-children">
-											<a href="#" class="splitting-text-anim-2" data-splitting="chars">início</a>
+											<a href="#" class="splitting-text-anim-2" data-splitting="chars">inÃ­cio</a>
 											<ul>
 												<li class="scrolla-element-anim-1">
 													<a href="index.html" class="splitting-text-anim-1" data-splitting="chars">main slider</a>
@@ -99,7 +99,7 @@
 													<a href="quem-somos.html" class="splitting-text-anim-1" data-splitting="chars">quem somos</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="sobre-nos.html" class="splitting-text-anim-1" data-splitting="chars">sobre nós</a>
+													<a href="sobre-nos.html" class="splitting-text-anim-1" data-splitting="chars">sobre nÃ³s</a>
 												</li>
 											</ul>
 										</li>
@@ -158,8 +158,8 @@
 									<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 									<div class="title">
 										<div class="title-inner splitting-text-anim-2" data-splitting>
-											paixão
-										</div>
+											paixÃ£o
+											</div>
 									</div>
 								</div>
 								<div class="view-btn">
@@ -180,7 +180,7 @@
 									<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 									<div class="title">
 										<div class="title-inner splitting-text-anim-2" data-splitting>
-											estética
+											estÃ©tica
 										</div>
 									</div>
 								</div>
