--- a/quem-somos.html
+++ b/quem-somos.html
@@ -151,7 +151,7 @@
 							<!-- titles -->
 							<div class="h-titles">
 								<div class="h-subtitle red splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-									Farejamos design
+									Farejamos e nos alimentamos de design
 								</div>
 								<div class="h-title splitting-text-anim-2 scroll-animate" data-splitting="chars" data-animate="active">
 									quem somos
@@ -205,7 +205,7 @@
 									Nossos serviços
 								</div>
 								<div class="m-subtitle scrolla-element-anim-1 scroll-animate" data-animate="active">
-									Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra, at molestie ante dictum.
+									Em nossa jornada no mundo do design, exploramos inovação e criatividade. Transformamos ideias em realidade, enfrentamos desafios com paixão e, ao lado de nossos parceiros, buscamos a excelência em cada projeto que realizamos.
 								</div>
 							</div>
 
