--- a/index-fullscreen.html
+++ b/index-fullscreen.html
@@ -155,7 +155,7 @@
 							<!-- slide titles -->
 							<div class="slide-titles">
 								<div class="titles">
-									<div class="label splitting-text-anim-1" data-splitting>a</div>
+									<div class="label splitting-text-anim-1" data-splitting>design com</div>
 									<div class="title">
 										<div class="title-inner splitting-text-anim-2" data-splitting>
 											paixão
@@ -177,7 +177,7 @@
 							<!-- slide titles -->
 							<div class="slide-titles">
 								<div class="titles">
-									<div class="label splitting-text-anim-1" data-splitting>a</div>
+									<div class="label splitting-text-anim-1" data-splitting>design com</div>
 									<div class="title">
 										<div class="title-inner splitting-text-anim-2" data-splitting>
 											estética
@@ -199,7 +199,7 @@
 							<!-- slide titles -->
 							<div class="slide-titles">
 								<div class="titles">
-									<div class="label splitting-text-anim-1" data-splitting>os</div>
+									<div class="label splitting-text-anim-1" data-splitting>design com</div>
 									<div class="title">
 										<div class="title-inner splitting-text-anim-2" data-splitting>
 											detalhes
