--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 												<div class="title">
 													<div class="title-inner splitting-text-anim-2" data-splitting>
 														técnica<br />
-														<em>&</em> <strong>paixão.</strong>
+														<em>&</em> <strong>paixão</strong>
 													</div>
 												</div>
 											</div>
