--- a/quem-somos.html
+++ b/quem-somos.html
@@ -107,7 +107,7 @@
 											<a href="#" class="splitting-text-anim-2" data-splitting="chars">trabalho</a>
 											<ul>
 												<li class="scrolla-element-anim-1">
-													<a href="work-single.html" class="splitting-text-anim-1" data-splitting="chars">webdesign</a>
+													<a href="work-single.html" class="splitting-text-anim-1" data-splitting="chars">web design</a>
 												</li>
 												<li class="scrolla-element-anim-1">
 													<a href="works-3-column.html" class="splitting-text-anim-1" data-splitting="chars">concept design</a>
@@ -223,7 +223,7 @@
 											<i class="fas fa-pencil-ruler"></i>
 										</div>
 										<div class="name splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-											Webdesign
+											web design
 										</div>
 										<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
 											Pesquisamos tendências, projetamos layouts atraentes, codificamos com precisão, testamos interatividade e otimizamos a performance.
@@ -317,90 +317,6 @@
 				</div>
 			</div>
 
-			<!-- Section Team -->
-			<div class="section section-inner m-team">
-				<div class="container">
-					<div class="row">
-						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 offset-2">
-
-							<!-- titles -->
-							<div class="m-titles">
-								<div class="m-title splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-									Our Team
-								</div>
-								<div class="m-subtitle scrolla-element-anim-1 scroll-animate" data-animate="active">
-									Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra, at molestie ante dictum.
-								</div>
-							</div>
-
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-
-							<!-- team -->
-							<div class="team-items row">
-
-								<div class="team-col col-xs-12 col-sm-12 col-md-6 col-lg-4">
-									<div class="team-item">
-										<div class="image">
-											<div class="img scrolla-element-anim-1 scroll-animate" data-animate="active">
-												<img src="images/team1.jpg" alt="" />
-											</div>
-										</div>
-										<div class="desc">
-											<div class="category splitting-text-anim-4 scroll-animate" data-splitting="chars" data-animate="active">
-												Photographer
-											</div>
-											<div class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">
-												Robert Long
-											</div>
-										</div>
-									</div>
-								</div>
-
-								<div class="team-col col-xs-12 col-sm-12 col-md-6 col-lg-4">
-									<div class="team-item">
-										<div class="image">
-											<div class="img scrolla-element-anim-1 scroll-animate" data-animate="active">
-												<img src="images/team2.jpg" alt="" />
-											</div>
-										</div>
-										<div class="desc">
-											<div class="category splitting-text-anim-4 scroll-animate" data-splitting="chars" data-animate="active">
-												Musician
-											</div>
-											<div class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">
-												John Smith
-											</div>
-										</div>
-									</div>
-								</div>
-
-								<div class="team-col col-xs-12 col-sm-12 col-md-6 col-lg-4">
-									<div class="team-item">
-										<div class="image">
-											<div class="img scrolla-element-anim-1 scroll-animate" data-animate="active">
-												<img src="images/team3.jpg" alt="" />
-											</div>
-										</div>
-										<div class="desc">
-											<div class="category splitting-text-anim-4 scroll-animate" data-splitting="chars" data-animate="active">
-												Model
-											</div>
-											<div class="name splitting-text-anim-4 scroll-animate" data-splitting="words" data-animate="active">
-												Natasha Singh
-											</div>
-										</div>
-									</div>
-								</div>
-
-							</div>
-
-						</div>
-					</div>
-				</div>
-			</div>
 
 			<!-- Section Partners -->
 			<div class="section section-inner m-partners">
@@ -411,10 +327,10 @@
 							<!-- titles -->
 							<div class="h-titles">
 								<div class="h-subtitle red splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-									A Trusted
+									Um parceiro
 								</div>
 								<div class="h-title splitting-text-anim-2 scroll-animate" data-splitting="chars" data-animate="active">
-									partner
+									para confiar
 								</div>
 								<div class="h-image" data-bottom-top="top: 0px;" data-top-bottom="top: -300px;">
 									<div class="img scrolla-element-anim-1 scroll-animate" data-animate="active" style="background-image: url(images/brand-img1.jpg);"></div>
