--- a/quem-somos.html
+++ b/quem-somos.html
@@ -347,16 +347,16 @@
 
 								<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
 									<p>
-										Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem.
+										Somos o parceiro ideal para projetos exigentes, combinando qualidade e agilidade. Com experiência diversificada, oferecemos soluções inovadoras.
 									</p>
 									<p>
-										Pellentesque tincidAenean sollicitudin massa eget turpis pharetra
+										Nosso compromisso é superar expectativas, entregando resultados excepcionais em tempo hábil.
 									</p>
 								</div>
 
 								<div class="partners-items row">
 
-									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
+									<div class="partners-col col-xs-12 col-sm-12 col-md-10 col-lg-10 scrolla-element-anim-1 scroll-animate" data-animate="active">
 										<div class="partners-item">
 											<div class="image">
 												<a href="#" target="blank"><img src="images/brand1.png" alt="" /></a>
@@ -368,6 +368,54 @@
 										<div class="partners-item">
 											<div class="image">
 												<a href="#" target="blank"><img src="images/brand2.png" alt="" /></a>
+											</div>
+										</div>
+									</div>
+
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
+										<div class="partners-item">
+											<div class="image">
+												<a href="#" target="blank"><img src="images/brand3.png" alt="" /></a>
+											</div>
+										</div>
+									</div>
+
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
+										<div class="partners-item">
+											<div class="image">
+												<a href="#" target="blank"><img src="images/brand4.png" alt="" /></a>
+											</div>
+										</div>
+									</div>
+
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
+										<div class="partners-item">
+											<div class="image">
+												<a href="#" target="blank"><img src="images/brand5.png" alt="" /></a>
+											</div>
+										</div>
+									</div>
+
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
+										<div class="partners-item">
+											<div class="image">
+												<a href="#" target="blank"><img src="images/brand6.png" alt="" /></a>
+											</div>
+										</div>
+									</div>
+
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
+										<div class="partners-item">
+											<div class="image">
+												<a href="#" target="blank"><img src="images/brand7.png" alt="" /></a>
+											</div>
+										</div>
+									</div>
+
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
+										<div class="partners-item">
+											<div class="image">
+												<a href="#" target="blank"><img src="images/brand4.png" alt="" /></a>
 											</div>
 										</div>
 									</div>
