--- a/quem-somos.html
+++ b/quem-somos.html
@@ -364,7 +364,7 @@
 										</div>
 									</div>
 
-									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active" style="border-top: 1px solid #323141">
 										<div class="partners-item">
 											<div class="image">
 												<a href="#" target="blank"><img src="images/brand2.png" alt="" /></a>
@@ -372,7 +372,7 @@
 										</div>
 									</div>
 
-									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active" style="border-top: 1px solid #323141">
 										<div class="partners-item">
 											<div class="image">
 												<a href="#" target="blank"><img src="images/brand3.png" alt="" /></a>
@@ -396,7 +396,7 @@
 										</div>
 									</div>
 
-									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active" style="border-bottom: none">
 										<div class="partners-item">
 											<div class="image">
 												<a href="#" target="blank"><img src="images/brand6.png" alt="" /></a>
@@ -404,34 +404,10 @@
 										</div>
 									</div>
 
-									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active" style="border-bottom: none">
 										<div class="partners-item">
 											<div class="image">
 												<a href="#" target="blank"><img src="images/brand7.png" alt="" /></a>
-											</div>
-										</div>
-									</div>
-
-									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
-										<div class="partners-item">
-											<div class="image">
-												<a href="#" target="blank"><img src="images/brand4.png" alt="" /></a>
-											</div>
-										</div>
-									</div>
-
-									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
-										<div class="partners-item">
-											<div class="image">
-												<a href="#" target="blank"><img src="images/brand3.png" alt="" /></a>
-											</div>
-										</div>
-									</div>
-
-									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
-										<div class="partners-item">
-											<div class="image">
-												<a href="#" target="blank"><img src="images/brand4.png" alt="" /></a>
 											</div>
 										</div>
 									</div>
