--- a/quem-somos.html
+++ b/quem-somos.html
@@ -440,10 +440,10 @@
 								</div>
 								<div class="h-text scrolla-element-anim-1 scroll-animate" data-animate="active">
 									<p>
-										Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem.
+										Agora, convidamos você a nos escolher como seu parceiro de design para o seu projeto. Transformaremos a sua visão em realidade.
 									</p>
 									<p>
-										Pellentesque tincidAenean sollicitudin massa eget turpis pharetra
+										 Juntos, daremos vida ao seu projeto com excelência.
 									</p>
 								</div>
 							</div>
