--- a/quem-somos.html
+++ b/quem-somos.html
@@ -350,21 +350,30 @@
 										Somos o parceiro ideal para projetos exigentes, combinando qualidade e agilidade. Com experiência diversificada, oferecemos soluções inovadoras.
 									</p>
 									<p>
-										Nosso compromisso é superar expectativas, entregando resultados excepcionais em tempo hábil.
+										Nosso compromisso é superar expectativas, entregando resultados excepcionais em tempo hábil. Para esse desafio, desenvolvemos e atualizamos nossa expertise junto a diferentes linguagens de programação, como HTML, CSS e JavaScript, ferramentas de design e plataformas de no/low code.
 									</p>
 								</div>
 
 								<div class="partners-items row">
 
-									<div class="partners-col col-xs-12 col-sm-12 col-md-10 col-lg-10 scrolla-element-anim-1 scroll-animate" data-animate="active">
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active" style="border-top: 1px solid #323141">
 										<div class="partners-item">
 											<div class="image">
-												<a href="#" target="blank"><img src="images/brand1.png" alt="" /></a>
+												<a href="#" target="blank"><img src="images/brand8.png" alt="" /></a>
 											</div>
 										</div>
 									</div>
 
 									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active" style="border-top: 1px solid #323141">
+										<div class="partners-item">
+											<div class="image">
+												<a href="#" target="blank"><img src="images/brand9.png" alt="" /></a>
+											</div>
+										</div>
+									</div>
+
+
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
 										<div class="partners-item">
 											<div class="image">
 												<a href="#" target="blank"><img src="images/brand2.png" alt="" /></a>
@@ -372,7 +381,7 @@
 										</div>
 									</div>
 
-									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active" style="border-top: 1px solid #323141">
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
 										<div class="partners-item">
 											<div class="image">
 												<a href="#" target="blank"><img src="images/brand3.png" alt="" /></a>
@@ -455,9 +464,9 @@
 			
 							<!-- newslatter form -->
 							<div class="newslatter-form scrolla-element-anim-1 scroll-animate" data-animate="active">
-								<div style="position: relative; padding: 0 20px; display: block; width: 100%; height: 62px; font-family: "Roboto"; font-size: 18px; color: #FFF; resize: none; outline: 0; background: none; border: 1px solid #c0c0c7">Fale conosco pelo Workana
+								<div style="position: relative; padding: 0; display: block; width: 100%; height: 62px; font-size: 25px; font-weight: 900; color: #FFF; resize: none; outline: 0; border: 1px solid #c0c0c7; text-transform: uppercase">Fale conosco pelo Workana
 								</div>
-								<div style="padding: 0; position: absolute; top: 0; right: 0; width: 300px; cursor: pointer; background-color: #594E9B; overflow: hidden; display: inline-block; vertical-align: top; font-size: 18px; color: #FFF; ont-weight: 900; height: 62px; line-height: 60px; text-align: center; text-decoration: none; border: 2px solid #594E9B; outline: none!important; box-shadow: none!important; -webkit-border-radius: 0; -webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1); -webkit-appearance: button; font-family: "Roboto"">
+								<div style="padding: 0; position: absolute; top: 0; right: 0; width: 300px; cursor: pointer; background-color: #594E9B; overflow: hidden; display: inline-block; vertical-align: top; font-size: 18px; color: #FFF; font-weight: 900; height: 62px; line-height: 60px; text-align: center; text-decoration: none; border: 2px solid #594E9B; outline: none!important; box-shadow: none!important; -webkit-border-radius: 0; -webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1); -webkit-appearance: button; font-family: "Roboto"">
 								</div>
 							</div>
 			
