--- a/quem-somos.html
+++ b/quem-somos.html
@@ -356,7 +356,7 @@
 
 								<div class="partners-items row">
 
-									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active" style="border-top: 1px solid #323141">
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
 										<div class="partners-item">
 											<div class="image">
 												<a href="#" target="blank"><img src="images/brand8.png" alt="" /></a>
@@ -364,7 +364,7 @@
 										</div>
 									</div>
 
-									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active" style="border-top: 1px solid #323141">
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
 										<div class="partners-item">
 											<div class="image">
 												<a href="#" target="blank"><img src="images/brand9.png" alt="" /></a>
@@ -464,10 +464,10 @@
 			
 							<!-- newslatter form -->
 							<div class="newslatter-form scrolla-element-anim-1 scroll-animate" data-animate="active">
-								<div style="position: relative; padding: 0; display: block; width: 100%; height: 62px; font-size: 25px; font-weight: 900; color: #FFF; resize: none; outline: 0; border: 1px solid #c0c0c7; text-transform: uppercase">Fale conosco pelo Workana
+								<div style="position: relative; padding: 14px; display: block; width: 100%; height: 62px; font-size: 20px; font-weight: 900; color: #FFF; resize: none; outline: 0; border: 1px solid #c0c0c7; text-transform: uppercase">Fale conosco pelo Workana
 								</div>
-								<div style="padding: 0; position: absolute; top: 0; right: 0; width: 300px; cursor: pointer; background-color: #594E9B; overflow: hidden; display: inline-block; vertical-align: top; font-size: 18px; color: #FFF; font-weight: 900; height: 62px; line-height: 60px; text-align: center; text-decoration: none; border: 2px solid #594E9B; outline: none!important; box-shadow: none!important; -webkit-border-radius: 0; -webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1); -webkit-appearance: button; font-family: "Roboto"">
-								</div>
+								<a href="https://www.workana.com/freelancer/ec1048047cdf3b10728ba174835d5eeb"><div style="padding: 14px; text-align: center; position: absolute; top: 0; right: 0; width: 300px; cursor: pointer; background-color: #594E9B; overflow: hidden; display: inline-block; vertical-align: top; font-size: 18px; color: #FFF; font-weight: 900; height: 62px; line-height: 60px; text-align: center; text-decoration: none; border: 2px solid #594E9B; outline: none!important; box-shadow: none!important; -webkit-border-radius: 0; -webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1); -webkit-appearance: button">Clique aqui
+								</div></a>
 							</div>
 			
 						</div>
