--- a/quem-somos.html
+++ b/quem-somos.html
@@ -464,7 +464,7 @@
 			
 							<!-- newslatter form -->
 							<div class="newslatter-form scrolla-element-anim-1 scroll-animate" data-animate="active">
-								<div style="text-align: center; position: relative; padding: 14px; display: block; width: 100%; height: 62px; font-size: 20px; font-weight: 900; color: #FFF; resize: none; outline: 0; border: 1px solid #c0c0c7; text-transform: uppercase">Fale conosco pelo Workana
+								<div style="position: relative; padding: 14px; display: block; width: 100%; height: 62px; font-size: 20px; font-weight: 900; color: #FFF; resize: none; outline: 0; border: 1px solid #c0c0c7; text-transform: uppercase">Fale conosco pelo Workana
 								</div>
 								<a href="https://www.workana.com/freelancer/ec1048047cdf3b10728ba174835d5eeb"><div style="text-align: center; position: absolute; top: 0; right: 0; width: 300px; cursor: pointer; background-color: #594E9B; overflow: hidden; display: inline-block; vertical-align: top; font-size: 18px; color: #FFF; font-weight: 900; height: 62px; line-height: 60px; text-align: center; text-decoration: none; border: 2px solid #594E9B; outline: none!important; box-shadow: none!important; -webkit-border-radius: 0; -webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1); -webkit-appearance: button; text-transform: uppercase">Clique aqui
 								</div></a>
