--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -328,10 +328,10 @@
 							<!-- titles -->
 							<div class="h-titles">
 								<div class="h-subtitle red splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-									A Trusted
+									Um parceiro
 								</div>
 								<div class="h-title splitting-text-anim-2 scroll-animate" data-splitting="chars" data-animate="active">
-									partner
+									para confiar
 								</div>
 								<div class="h-image" data-bottom-top="top: 0px;" data-top-bottom="top: -300px;">
 									<div class="img scrolla-element-anim-1 scroll-animate" data-animate="active" style="background-image: url(images/brand-img1.jpg);"></div>
@@ -348,10 +348,10 @@
 
 								<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
 									<p>
-										Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem.
+										Somos o parceiro ideal para projetos exigentes, combinando qualidade e agilidade. Com experiência diversificada, oferecemos soluções inovadoras.
 									</p>
 									<p>
-										Pellentesque tincidAenean sollicitudin massa eget turpis pharetra
+										Nosso compromisso é superar expectativas, entregando resultados excepcionais em tempo hábil. Para esse desafio, desenvolvemos e atualizamos nossa expertise junto a diferentes linguagens de programação, como HTML, CSS e JavaScript, ferramentas de design e plataformas de no/low code.
 									</p>
 								</div>
 
@@ -360,10 +360,19 @@
 									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
 										<div class="partners-item">
 											<div class="image">
-												<a href="#" target="blank"><img src="images/brand1.png" alt="" /></a>
+												<a href="#" target="blank"><img src="images/brand8.png" alt="" /></a>
 											</div>
 										</div>
 									</div>
+
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
+										<div class="partners-item">
+											<div class="image">
+												<a href="#" target="blank"><img src="images/brand9.png" alt="" /></a>
+											</div>
+										</div>
+									</div>
+
 
 									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
 										<div class="partners-item">
@@ -385,6 +394,30 @@
 										<div class="partners-item">
 											<div class="image">
 												<a href="#" target="blank"><img src="images/brand4.png" alt="" /></a>
+											</div>
+										</div>
+									</div>
+
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active">
+										<div class="partners-item">
+											<div class="image">
+												<a href="#" target="blank"><img src="images/brand5.png" alt="" /></a>
+											</div>
+										</div>
+									</div>
+
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active" style="border-bottom: none">
+										<div class="partners-item">
+											<div class="image">
+												<a href="#" target="blank"><img src="images/brand6.png" alt="" /></a>
+											</div>
+										</div>
+									</div>
+
+									<div class="partners-col col-xs-12 col-sm-6 col-md-5 col-lg-5 scrolla-element-anim-1 scroll-animate" data-animate="active" style="border-bottom: none">
+										<div class="partners-item">
+											<div class="image">
+												<a href="#" target="blank"><img src="images/brand7.png" alt="" /></a>
 											</div>
 										</div>
 									</div>
@@ -417,10 +450,10 @@
 								</div>
 								<div class="h-text scrolla-element-anim-1 scroll-animate" data-animate="active">
 									<p>
-										Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem.
+										Agora, convidamos você a nos escolher como seu parceiro de design para o seu projeto. Transformaremos a sua visão em realidade.
 									</p>
 									<p>
-										Pellentesque tincidAenean sollicitudin massa eget turpis pharetra
+										 Juntos, daremos vida ao seu projeto com excelência.
 									</p>
 								</div>
 							</div>
@@ -432,12 +465,10 @@
 			
 							<!-- newslatter form -->
 							<div class="newslatter-form scrolla-element-anim-1 scroll-animate" data-animate="active">
-								<form id="newslatter_form" method="post">
-									<div class="field">
-										<input type="email" name="email" placeholder="Email address" />
-									</div>
-									<input type="submit" class="submit-btn" value="Get Started" />
-								</form>
+								<div style="	position: relative; padding: 14px; display: block; width: 100%; height: 62px; font-size: 20px; font-weight: 900; color: #FFF; resize: none; outline: 0; border: 1px solid #c0c0c7; text-transform: uppercase">Fale conosco pelo Workana
+								</div>
+								<a href="https://www.workana.com/freelancer/ec1048047cdf3b10728ba174835d5eeb"><div style="text-align: center; position: absolute; top: 0; right: 0; width: 300px; cursor: pointer; background-color: #594E9B; overflow: hidden; display: inline-block; vertical-align: top; font-size: 18px; color: #FFF; font-weight: 900; height: 62px; line-height: 60px; text-align: center; text-decoration: none; border: 2px solid #594E9B; outline: none!important; box-shadow: none!important; -webkit-border-radius: 0; -webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1); -webkit-appearance: button; text-transform: uppercase">Clique aqui
+								</div></a>
 							</div>
 			
 						</div>
