--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -154,10 +154,10 @@
 					<!-- titles -->
 					<div class="titles">
 						<div class="title splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-							about
+							sobre
 						</div>
 						<div class="subtitle splitting-text-anim-2 scroll-animate" data-splitting="chars" data-animate="active">
-							Who Am I
+							nós
 						</div>
 					</div>
 					
@@ -173,16 +173,16 @@
 						<div class="row">
 							<div class="col-xs-12 col-sm-12 col-md-8 col-lg-5">
 								<div class="image scrolla-element-anim-1 scroll-animate" data-animate="active" style="background-image: url(images/about-profile.jpg);">
-									<div class="signature">Robert Long</div>
+									<div class="signature">Dave Craft</div>
 								</div>
 							</div>
 							<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 								<div class="desc">
 									<div class="subname splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-										HELLO
+										Como vai?
 									</div>
 									<div class="name splitting-text-anim-2 scroll-animate" data-splitting="chars" data-animate="active">
-										Robert Long
+										Nosso nome é Dave Craft.
 									</div>
 									<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
 										Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra, at molestie ante dictum.
